--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Keith-L-Watford/employee-tracker#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "mysql": "^2.18.1"
   }
 }
