--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Keith-L-Watford/employee-tracker#readme",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "inquirer": "^0.2.3",
     "mysql": "^2.18.1"
   }
 }
